k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bulmer-apt
  namespace: bulmer-apt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bulmer-apt
  template:
    metadata:
      labels:
        app: bulmer-apt
    spec:
      containers:
        - name: nginx
          image: ghcr.io/dylanbulmer/apt:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          readinessProbe:
            httpGet:
              path: /bulmer.asc
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
