k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apt-repo
  namespace: apt-repo
spec:
  selector:
    app: apt-repo
  ports:
    - port: 80
      targetPort: 80
